Add text to quiz.html and amend color scheme on p and sub-title

--- a/contact.html
+++ b/contact.html
@@ -145,8 +145,8 @@
         <div id="footer-details" class="row no-gutters solid-border">
             <div class="col-sm-6">
             <h3 class="uppercase sub-title">Contact</h3>
-            <p class="sub-title">                    
-                <a rel="noopener" href="#start-of-form" class="hvr-grow purple-text" aria-label="use the feedback form above (opens in a new tab)">Use the feedback form above</a>
+            <p class="foot-title">                    
+                <a rel="noopener" href="#start-of-form" class="hvr-grow" aria-label="use the feedback form above (opens in a new tab)">Use the feedback form above</a>
             </p>
             <br>
             </div>
