--- a/index.html
+++ b/index.html
@@ -43,73 +43,77 @@
  <!-- start of main content -->
 
     <main>
-        <section>
+    <section>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">  
                     <br>
-                    <div class ="col-xl-2">
+                    <div class ="col-md-2 col-sm-1 col-xl-3">
                     </div>
-                    <div class="col-xl-8">
+                    <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">What is Autism?</h2>
                         <div class="text-blue">
                         <p class="text-blue">Autism is a lifelong developmental disability which affects how people communicate and interact with the world.
                              More than one in 100 people are on the autism spectrum and there are around 700,000 autistic adults and children in the UK.
                         </p>
-                        <p>Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
-                           The definition of Autism has changed over time and continues to change.
-                       </p>
-                       <p>It is variously called Autism, The Autistic spectrum and Autism Spectrum Disorder (ASD). More recently 'Condition' (ASC) has been chosen instead of Disorder
-                         as the latter has negative connotations of disability.
-                       </p>
-                       <p>Similarly spectrum is often reapleced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
-                         quite challenged in one area but excel in another.
-                       </p>
+                        <br>
+                        <p>
+                            Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
+                            The definition of Autism has changed over time and continues to change.
+                        </p>
                        </div>
                     </div>
                 </div>
             </div>
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">
+                    <div class ="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                        <figure>
+                        <img class="img img-responsive" src="assets/images/asd_spectrum.png"
+                        alt="Autism Challenges map"
+                        aria-label="map of autism spectrum disorder">
+                        <figcaption class="text-blue center-text">The range of challenges in Autism</figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>    
     <!-- start of main page content -->
-     <!-- first 3 entries -->
+     <!-- first 2 entries -->
      <div class="container-fluid">
         <div class="row no-gutters section-details">        
             <div class="col-sm-1 col-md-2">
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                          data-target="#autism1" aria-expanded="false" aria-controls="autism">
-                         Some text about autism 1</button>
+                         The Autistic Spectrum</button>
                         </p>
                          <div class="collapse" id="autism1">
-                         <div>
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
-                            </p>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
+                                The definition of Autism has changed over time and continues to change.
                             </p>
                          </div>   
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                         data-target="#autism2" aria-expanded="false" aria-controls="autism">
-                        Some text about autism 2</button>
+                        Spectrum Versus Disorder</button>
                         </p>
                         <div class="collapse" id="autism2">
                         <div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                            Spectrum is often replaced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
+                         quite challenged in one area but excel in another.
                         </p>
                         </div>
                         </div>
@@ -120,7 +124,7 @@
         <div class="row no-gutters section-details">        
             <div class="col-sm-1 col-md-2">
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -141,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -166,7 +170,7 @@
         <div class="row no-gutters section-details">        
             <div class="col-sm-1 col-md-2">
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -187,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -212,7 +216,7 @@
         <div class="row no-gutters section-details">        
             <div class="col-sm-1 col-md-2">
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -233,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-8 col-sm-4">
+            <div class="col-xs-8 col-md-4 col-sm-5">
                 <div class="row">
                     <div class="col-heading">                            
                         <p>
@@ -258,11 +262,11 @@
     </div>
     <!-- end of main data - now summarise -->
             <div class="container-fluid">
-                <div class="row section-details">  
+                <div class="row no-gutters section-details">  
                     <br>
-                    <div class ="col-xl-2">
+                    <div class="col-md-2 col-sm-1 col-xl-3">
                     </div>
-                    <div class="col-xl-8">
+                    <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Want to learn more?</h2>
                         <p class ="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
                             about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a></p>
@@ -270,58 +274,59 @@
                     </div>
                 </div>
             </div>
-        </section>  
+    </section>  
     </main>
     <footer>
  <!-- direct email or link to comments page -->
- <div class="container-fluid">
-    <div id="footer-details" class="row no-gutters solid-border">
-        <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Contact</h3>
-            <p class="sub-title">                    
-                <a href="contact.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
-            </p>
-            <br>
-        </div>
+    <div class="container-fluid">
+        <div id="footer-details" class="row no-gutters solid-border">
+            <div class="col-sm-6">
+                <h3 class="uppercase sub-title">Contact</h3>
+                <p class="foot-title">                    
+                    <a href="contact.html" class="hvr-grow " aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+                </p>
+                <br>
+            </div>
 <!-- Social Media Links   -->
-        <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Social</h3>
-            <ul class="list-inline social-links">
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://x.com/Autism?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" aria-label="Go to my Twitter X account (opens in a new tab)" class="hvr-grow">
-                        <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://uk.linkedin.com/company/national-autistic-society" aria-label="Go to my LinkedIn page (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        <span class="sr-only">LinkedIn</span>
-                    </a>
-                </li>                     
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.youtube.com/user/nationalautisticsoc" aria-label="Go to my Youtube channel (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">YouTube</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.autism.org.uk/" aria-label="Go to the national autistic society web site (opens in a new tab)" class="hvr-grow">
-                        <i class="fa-brands fa-internet-explorer" aria-hidden="true"></i>
-                        <span class="sr-only">Vimeo</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="col-sm-6">
+                <h3 class="uppercase sub-title">Social</h3>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://x.com/Autism?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" aria-label="Go to my Twitter X account (opens in a new tab)" class="hvr-grow">
+                            <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://uk.linkedin.com/company/national-autistic-society" aria-label="Go to my LinkedIn page (opens in a new tab)" class="hvr-grow">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>                     
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/user/nationalautisticsoc" aria-label="Go to my Youtube channel (opens in a new tab)" class="hvr-grow">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.autism.org.uk/" aria-label="Go to the national autistic society web site (opens in a new tab)" class="hvr-grow">
+                            <i class="fa-brands fa-internet-explorer" aria-hidden="true"></i>
+                            <span class="sr-only">Vimeo</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-</footer>
+    </footer>
+<!-- JavaScript Scripts  -->
     <script type="text/javascript" src="assets/js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
