--- a/myth.html
+++ b/myth.html
@@ -220,8 +220,8 @@
     <div id="footer-details" class="row no-gutters solid-border">
         <div class="col-sm-6">
             <h3 class="uppercase sub-title">Contact</h3>
-            <p class="sub-title">                    
-                <a href="contact.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+            <p class="foot-title">                    
+                <a href="contact.html" class="hvr-grow" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
             </p>
             <br>
         </div>
