--- a/quiz.html
+++ b/quiz.html
@@ -47,11 +47,15 @@
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">  
                     <br>
-                    <div class ="col-xl-3">
+                    <div class ="col-md-2 col-sm-1 col-xl-3">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
+                        <p Class="purple-text">There are 12 multiple choice questions selected at random from a bank of over 100 questions and answers.</p>
+                        <p Class="purple-text">Accuracy is more important than speed but there is a time limit of 20 seconds for each question.</p>
+                        <p Class="purple-text">Once you select your answer and press 'Next', the correct andswer will be revealed and the next question will appear.</p>
+                        <br>
+                        <p Class="purple-text">Good Luck !</p>
                     </div>
                 </div>
             </div>
@@ -59,9 +63,9 @@
      <!-- first 3 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-xl-1-half">
-                    </div>
                     <div class="col-xl-3">
+                    </div>
+                    <div class="col-xl-6">
                         <div class="row">
                             <div class="col-heading">                            
                                 <h2 class="sub-title">autism 1</h2>
@@ -73,41 +77,10 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3">
-                        <div class="row">
-                            <div class="col-heading">                            
-                                <h2 class="sub-title">and autism 1</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3">
-                        <div class="row">
-                            <div class="col-heading">                            
-                                <h2 class="sub-title">more autism 1</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias quis accusantium consequuntur quae distinctio architecto, necessitatibus iusto, voluptatem nobis soluta laboriosam incidunt esse doloribus, ut praesentium mollitia. Voluptate, harum.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, hic molestiae maiores ullam inventore nulla voluptatibus sint fugiat eum voluptate repellat odio repudiandae libero modi vero? Reiciendis modi error accusamus.
-                                </p>
-                            </div>
-                        </div>
-                    </div>                          
+                    </div>                   
                 </div>            
-            </div> 
-            
-            
+            </div>     
         </section>  
-
-
-
 
 
     </main>
@@ -117,8 +90,8 @@
     <div id="footer-details" class="row no-gutters solid-border">
         <div class="col-sm-6">
             <h3 class="uppercase sub-title">Contact</h3>
-            <p class="sub-title">                    
-                <a href="contact.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+            <p class="foot-title">                    
+                <a href="contact.html" class="hvr-grow " aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
             </p>
             <br>
         </div>
