Add text and lists to Myths page, style list formats

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
                                 Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
                                 The definition of Autism has changed over time and continues to change.
                             </p>
+                            <p>
+                                It has been more than 50 years since Leo Kanner first described his classic autistic syndrome.
+                                Since then, the results of research and clinical work have helped us learn more about autism.
+                                Regardless of this recent naming of the condition, its clear that Autism has been with us for millenia...
+                            </p>
+                            <p>
+                                More and more people are being diagnosed as autistic, 
+                                although we still have a long way to go in creating a world that works for autistic people.
+                            </p>
                          </div>   
                     </div>
                 </div>
@@ -115,6 +124,10 @@
                             Spectrum is often replaced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
                          quite challenged in one area but excel in another.
                         </p>
+                        <p>
+                            The rainbow spectrum is a common symbol used to represent the diversity of the autism community. 
+                            It encompasses a range of colours to signify the wide variety of characteristics, strengths, and challenges present within the spectrum.
+                        </p>
                         </div>
                         </div>
                     </div>
@@ -130,15 +143,21 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                          data-target="#autism3" aria-expanded="false" aria-controls="autism">
-                         Some text about autism 3</button>
+                         High & Low Functioning</button>
                         </p>
                          <div class="collapse" id="autism3">
                          <div>
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                There is a big pile of confusion over Asperger’s, 
+                                Autism and functioning labels (high and low) that causes many difficulties for parents.
                             </p>
                             <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                The only clinical difference between Autism and Asperger’s is speech delay around speech milestones,
+                                 and that does not necessarily mean mutism or selective mutism—it could literally mean partly delayed speech.
+                            </p>
+                            <p>
+                                The two are inseparable past that point, because they are essentially the same thing.
+                                 <strong>There is no identifiable difference between an adult diagnosed with Asperger’s and an adult with a diagnosis of High-Functioning Autism.</strong>
                             </p>
                          </div>   
                         </div>
@@ -151,15 +170,20 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                         data-target="#autism4" aria-expanded="false" aria-controls="autism">
-                        Some text about autism 2</button>
+                        So, To Aspergers or not To Asp..</button>
                         </p>
                         <div class="collapse" id="autism4">
                         <div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                            There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
+                             (The Nazi government funded and directed him, and that’s a whole other story and a reason many now avoid the term altogether.)
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                            The High and Low Functioning labels were intended to separate out Autistics with an IQ under 70. Now though, societally functioning labels are used by people 
+                            and professionals to designate one’s ability to function in society. but...
+                        </p>
+                        <p>
+                            Its complete nonsense, all Autistic people are individuals.
                         </p>
                         </div>
                         </div>
@@ -176,15 +200,16 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                          data-target="#autism5" aria-expanded="false" aria-controls="autism">
-                         Some text about autism 5</button>
+                         I'm an individual..and so am I..</button>
                         </p>
                          <div class="collapse" id="autism5">
                          <div>
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                We are all different, and function differently on a daily basis.
                             </p>
                             <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                Autism is Autism. Though certain people have better support structures and coping strategies than others, the underlying Autism is the same.
+                                It just affects different people differently, often with a co-morbid condition exacerbating the problem.
                             </p>
                          </div>   
                         </div>
@@ -197,15 +222,17 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                         data-target="#autism6" aria-expanded="false" aria-controls="autism">
-                        Some text about autism 6</button>
+                        Hunting High and Low..</button>
                         </p>
                         <div class="collapse" id="autism6">
                         <div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                            There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
+                             There is no mild Autism, or severe Autism; there is only Autism and the ability of the individual to prevent societal norms from crippling them.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                            The vagueness of all this, and the misunderstanding and myths around it, just serves to confuse Neurotypicals as well as pre- and newly diagnosed people.
+                             It puts a barrier up between all of these groups and already established Autistics.
                         </p>
                         </div>
                         </div>
@@ -222,15 +249,17 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                          data-target="#autism7" aria-expanded="false" aria-controls="autism">
-                         Some text about autism 7</button>
+                         When you've met one Autistic person..</button>
                         </p>
                          <div class="collapse" id="autism7">
                          <div>
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                            Then, as the sayiong goes, you've met <strong>ONE</strong> Autistic person. The diagnosis means that there is neurodiversity 
+                            but the scale, nature and breadth differ enormously. 
                             </p>
                             <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                            If you add in different quantities of primary colour paint, adding in more blue on one mix and omitting a colour totally from the next then
+                            you'll get a new colour in a general spectrum but no two mixes will be identical.  
                             </p>
                          </div>   
                         </div>
@@ -243,15 +272,17 @@
                         <p>
                         <button class="btn btn-block" type="button" data-toggle="collapse"
                         data-target="#autism8" aria-expanded="false" aria-controls="autism">
-                        Some text about autism 8</button>
+                        Chase the Rainbow...</button>
                         </p>
                         <div class="collapse" id="autism8">
                         <div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                            The puzzle pattern represents the complexity of the autism spectrum, and the use of primary colours symbolises
+                             the diversity of people living with autism and their families.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                            However, there are those who view the 'puzzle' as a negative concept - something to be 'fixed', 
+                            so the rainbow, eternity symbol or mobius strip are often preferred. 
                         </p>
                         </div>
                         </div>
