--- a/myth.html
+++ b/myth.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12">
                 <div>
-                    <h1 class="title">Can you tell a Myth from Fact?<span>                        
+                    <h1 class="title">Truth or Myth?<span>                        
                     <img class="logo-img" src="assets/images/butterfly.png"
                         alt="Autism butterfly Logo"
                     aria-label="Multicoloured butterfly in jigsaw pieces."></span></h1>
@@ -51,7 +51,91 @@
                     </div>
                     <div class="col-xl-6">
                         <h2 class="sub-title">Myth or Truth?</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
+                        <p>
+                            Autism is a spectrum condition and affects people in different ways.
+                             Like all people, autistic people have their own strengths and weaknesses. 
+                            Here is a list of difficulties autistic people may share, including the two key difficulties
+                             <strong>(in Bold)</strong> required for a diagnosis: 
+                        </p>
+                        <p class="indent-para">
+                            <strong>Social communication:</strong>
+                        </p>
+                        <ul>
+                            <li>
+                                Taking things literally and not understanding abstract concepts.
+                            </li>
+                            <li>
+                                Needing extra time to process information or answer questions.
+                            </li>
+                            <li>
+                                Repeating what others say to them (this is called echolalia).
+                            </li>
+                        </ul>
+                        <p class="indent-para">
+                            <strong>Social interaction:</strong>
+                        </p>
+                        <ul>
+                            <li>
+                                Appear to be insensitive (or over sensitive).
+                            </li>
+                            <li>
+                                Seek out time alone when overloaded by other people.
+                            </li>
+                            <li>
+                                Not seek comfort from other people(even though they may crave it)
+                            </li>
+                            <li>
+                                Appear to behave strangely; or in a way thought to be socially inappropriate.
+                            </li>
+                            <li>
+                                Find it hard to form friendships (when again, they may crave this).
+                            </li>
+                        </ul>
+                        <p class="indent-para">
+                            <strong>Other Key Difficluties:</strong>
+                        </p>
+                        <ul>
+                            <li>
+                                Repetitive and restrictive behaviour.
+                            </li>
+                            <li>
+                                Over- or under-sensitivity to light, sound, taste or touch.
+                            </li>
+                            <li>
+                                Highly focused interests or hobbies.
+                            </li>
+                            <li>
+                                Extreme anxiety.
+                            </li>
+                            <li>
+                                Meltdowns and shutdowns.
+                            </li>
+                        </ul>
+                        <p>
+                            With its unwritten rules, the world can seem a very unpredictable and confusing place to autistic people.
+                        </p>
+                        <p>
+                             This is why they often prefer to have routines so that they know what is going to happen.
+                        </p>
+                        <p>
+                            They may want to:
+                        </p>
+                        <ul>
+                            <li>
+                                Travel the same way to and from school or work
+                            </li>
+                            <li>
+                                Wear the same clothes
+                            </li>
+                            <li>
+                                Eat exactly the same food for breakfast
+                            </li>
+                        </ul>
+                        </p>
+                        <p>
+                            Why not check out the top 9 myths about Autism below. 
+                            Click on a myth to flip it and learn the truth. 
+                        </p>
                     </div>
                 </div>
             </div>
