Func: amend index.html to jquery slideup/down

--- a/quiz.html
+++ b/quiz.html
@@ -32,9 +32,9 @@
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
-              <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)"" href="myth.html">Myths</a>
-              <a class="btn btn-lg active btn-primary" aria-pressed="true" aria-label="Go to the quiz page (opens in a new tab)"" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)"" href="contact.html">Contact</a>
+              <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
+              <a class="btn btn-lg active btn-primary" aria-pressed="true" aria-label="Go to the quiz page (opens in a new tab)"  href="quiz.html">Quiz</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
@@ -134,8 +134,8 @@
     </div>
 </div>
 </footer>
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
+<script type="text/javascript" src="assets/js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
