--- a/myth.html
+++ b/myth.html
@@ -32,9 +32,9 @@
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
-              <a class="btn btn-lg active btn-danger" aria-pressed="true" aria-label="Go to the Myth Buster page (opens in a new tab)"" href="myth.html">Myths</a>
-              <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)"" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)"" href="contact.html">Contact</a>
+              <a class="btn btn-lg active btn-danger" aria-pressed="true" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
+              <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
@@ -113,6 +113,7 @@
                         </ul>
                         <p>
                             With its unwritten rules, the world can seem a very unpredictable and confusing place to autistic people.
+                             The rules that seem obvious to neurotypical people just aren't visible to the neurodiverse.
                         </p>
                         <p>
                              This is why they often prefer to have routines so that they know what is going to happen.
@@ -122,13 +123,13 @@
                         </p>
                         <ul>
                             <li>
-                                Travel the same way to and from school or work
+                                Travel the same way to and from school or work.
                             </li>
                             <li>
-                                Wear the same clothes
+                                Wear the same clothes.
                             </li>
                             <li>
-                                Eat exactly the same food for breakfast
+                                Eat exactly the same food for breakfast, or lunch or dinner...
                             </li>
                         </ul>
                         </p>
@@ -348,8 +349,8 @@
     </div>
 </div>
 </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
     <script type="text/javascript" src="assets/js/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>    
 </body>
