--- a/index.html
+++ b/index.html
@@ -100,14 +100,11 @@
                 <div class="col-sm-1 col-md-2">
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                               
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                            data-target="#autism1" aria-expanded="false" aria-controls="autism">
-                             The Autistic Spectrum</button>
-                            </p>
-                            <div class="collapse" id="autism1">  
+                    <div class="row">                              
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism1" aria-expanded="false" aria-controls="autism">
+                         The Autistic Spectrum</button>
+                        <div class="content-hidden" id="autism1">  
                                 <p>
                                     Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
                                     The definition of Autism has changed over time and continues to change.
@@ -121,19 +118,15 @@
                                     More and more people are being diagnosed as autistic, 
                                     although we still have a long way to go in creating a world that works for autistic people.
                                 </p>
-                            </div>   
-                        </div>
+                        </div>   
                     </div>
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                            data-target="#autism2" aria-expanded="false" aria-controls="autism">
-                            Spectrum Versus Disorder</button>
-                            </p>
-                            <div class="collapse" id="autism2">
+                    <div class="row">                             
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism2" aria-expanded="false" aria-controls="autism">
+                        Spectrum Versus Disorder</button>
+                        <div class="content-hidden" id="autism2">
                             <div class="button-border">
                             <p>
                                 Spectrum is often replaced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
@@ -144,7 +137,6 @@
                                 It encompasses a range of colours to signify the wide variety of characteristics, strengths, and challenges present within the spectrum.
                             </p>
                             </div>
-                           </div>
                         </div>
                     </div>
                 </div>
@@ -153,14 +145,11 @@
                 <div class="col-sm-1 col-md-2">
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <div class="row">                           
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
                              data-target="#autism3" aria-expanded="false" aria-controls="autism">
-                             High & Low Functioning</button>
-                            </p>
-                             <div class="collapse" id="autism3">
+                         High & Low Functioning</button>        
+                        <div class="content-hidden" id="autism3">
                              <div>
                                 <p>
                                     There is a big pile of confusion over Asperger’s, 
@@ -175,19 +164,15 @@
                                      <strong>There is no identifiable difference between an adult diagnosed with Asperger’s and an adult with a diagnosis of High-Functioning Autism.</strong>
                                 </p>
                              </div>   
-                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                            data-target="#autism4" aria-expanded="false" aria-controls="autism">
-                            So, To Aspergers or not To Asp..</button>
-                            </p>
-                            <div class="collapse" id="autism4">
+                    <div class="row">                            
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism4" aria-expanded="false" aria-controls="autism">
+                        So, To Aspergers or not To Asp..</button>
+                        <div class="content-hidden" id="autism4"> 
                             <div>
                             <p>
                                 There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
@@ -201,7 +186,6 @@
                                 Its complete nonsense, all Autistic people are individuals.
                             </p>
                             </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -210,14 +194,11 @@
                 <div class="col-sm-1 col-md-2">
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                             data-target="#autism5" aria-expanded="false" aria-controls="autism">
-                             I'm an individual..and so am I..</button>
-                            </p>
-                            <div class="collapse" id="autism5">
+                    <div class="row">                           
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                         data-target="#autism5" aria-expanded="false" aria-controls="autism">
+                         I'm an individual..and so am I..</button>
+                        <div class="content-hidden" id="autism5">
                             <div>
                                 <p>
                                     We are all different, and function differently on a daily basis.
@@ -227,19 +208,15 @@
                                     It just affects different people differently, often with a co-morbid condition exacerbating the problem.
                                 </p>
                              </div>   
-                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                            data-target="#autism6" aria-expanded="false" aria-controls="autism">
-                            Hunting High and Low..</button>
-                            </p>
-                            <div class="collapse" id="autism6">
+                    <div class="row">                            
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism6" aria-expanded="false" aria-controls="autism">
+                        Hunting High and Low..</button>
+                        <div class="content-hidden" id="autism6">
                             <div>
                             <p>
                                 There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
@@ -250,7 +227,6 @@
                                  It puts a barrier up between all of these groups and already established Autistics.
                             </p>
                             </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -259,15 +235,12 @@
                 <div class="col-sm-1 col-md-2">
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                             data-target="#autism7" aria-expanded="false" aria-controls="autism">
-                             When you've met one Autistic person..</button>
-                            </p>
-                             <div class="collapse" id="autism7">
-                             <div>
+                    <div class="row">                           
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                         data-target="#autism7" aria-expanded="false" aria-controls="autism">
+                         When you've met one Autistic person..</button>
+                         <div class="content-hidden" id="autism7">
+                         <div>
                                 <p>
                                 Then, as the sayiong goes, you've met <strong>ONE</strong> Autistic person. The diagnosis means that there is neurodiversity 
                                 but the scale, nature and breadth differ enormously. 
@@ -276,20 +249,16 @@
                                 If you add in different quantities of primary colour paint, adding in more blue on one mix and omitting a colour totally from the next then
                                 you'll get a new colour in a general spectrum but no two mixes will be identical.  
                                 </p>
-                             </div>   
-                            </div>
+                         </div>   
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">
-                        <div class="col-heading">                            
-                            <p>
-                            <button class="btn btn-block" type="button" data-toggle="collapse"
-                            data-target="#autism8" aria-expanded="false" aria-controls="autism">
-                            Chase the Rainbow...</button>
-                            </p>
-                            <div class="collapse" id="autism8">
+                    <div class="row">                            
+                        <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism8" aria-expanded="false" aria-controls="autism">
+                        Chase the Rainbow...</button>
+                        <div class="content-hidden" id="autism8">
                             <div>
                             <p>
                                 The puzzle pattern represents the complexity of the autism spectrum, and the use of primary colours symbolises
@@ -299,7 +268,6 @@
                                 However, there are those who view the 'puzzle' as a negative concept - something to be 'fixed', 
                                 so the rainbow, eternity symbol or mobius strip are often preferred. 
                             </p>
-                            </div>
                             </div>
                         </div>
                     </div>
